<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                tools:context=".InsertUser">

                <!-- TODO: Update blank fragment layout -->
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="@dimen/large"
                    android:fontFamily="@font/sf_bold"
                    android:text="@string/insert_user_details"
                    android:textColor="@color/black" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"

                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="8dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayout_username"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:endIconMode="clear_text"
                            android:layout_margin="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView_loginTitle"
                            app:startIconDrawable="@drawable/person_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputEditText_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/name"
                                android:nextFocusForward="@id/inputLayout_userAge"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayout_userAge"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:endIconMode="clear_text"
                            android:layout_margin="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView_loginTitle"
                            app:startIconDrawable="@drawable/age_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputEditText_userage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:hint="@string/age"
                                android:nextFocusForward="@id/inputEditText_jobTitle"

                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayout_userJobTitle"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:endIconMode="clear_text"
                            android:layout_margin="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView_loginTitle"
                            app:startIconDrawable="@drawable/work_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputEditText_jobTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/job_title"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/select_gender"
                            android:fontFamily="@font/sf_bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/small"
                            android:layout_marginStart="8dp"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:id="@+id/genderRadioGroup"
                            android:text="Select Gender"
                            android:orientation="horizontal"
                            android:layout_margin="8dp"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/maleRadioButton"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/femaleRadioButton"
                                android:layout_width="0dp"
                                android:layout_weight="1"                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:textSize="@dimen/medium"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingBottom="8dp"

                    android:id="@+id/save_btn"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/save_user_details"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/progress_bar"
                android:indeterminateTint="@color/purple_200"/>


        </RelativeLayout>
    </ScrollView>
</layout>
